Intergalactic 2: Made some tweaks to the theme's Gutenberg support, including: * Reorganized some CSS to remove redundant styles; removed empty selectors * Added an overflow to the site content to prevent side scrolling with wide blocks * Fixed some wide alignment weirdness with images * Made align full and align wide styles more general, so they'd be applied to all classes; made sure text-based aligned blocks weren't quite as wide. * Added bottom margin to Media & Text block. * Made the post title 100% of the width * Reset selectors back to default styles * Updated JavaScript that adds wide image class, to skip any images inside of GB blocks.

--- a/intergalactic-2/blocks.css
+++ b/intergalactic-2/blocks.css
@@ -18,6 +18,68 @@ Description: Used to style Gutenberg Blocks.
 1.0 General Block Styles
 --------------------------------------------------------------*/
 
+/* Alignments */
+
+.site-content {
+	overflow-x: hidden;
+}
+
+/* Wide Width */
+
+@media (min-width: 1024px) {
+	.alignwide {
+		width: auto;
+		margin-left: -20%;
+		margin-right: -20%;
+		position: relative;
+	}
+
+	.wp-block-embed.is-type-video.alignwide iframe {
+		width: 100% !important;
+		height: 100% !important;
+	}
+}
+
+/* Full Width */
+
+.alignfull {
+	width: 100vw;
+	max-width: 100vw;
+	margin-left: 0;
+	margin-right: 0;
+	position: relative;
+	left: 50%;
+	transform: translateX( -50% );
+}
+
+/* Make non image-based blocks a bit narrower, so they don't get cut off. */
+
+.wp-block-columns.alignfull,
+.wp-block-audio.alignfull,
+.wp-block-table.alignfull,
+.wp-block-latest-comments.alignfull,
+.wp-block-categories.alignfull,
+.wp-block-latest-posts.alignfull {
+	max-width: 96vw;
+	transform: translateX( -50% );
+	width: 96vw;
+}
+
+.wp-block-embed.is-type-video.alignfull iframe {
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.wp-block-embed.is-type-video iframe {
+	max-height: 100%;
+}
+
+.rtl .alignfull {
+	left: auto;
+	right: 50%;
+	transform: translateX(50%);
+}
+
 /* Captions */
 
 [class^="wp-block-"] figcaption {
@@ -34,72 +96,21 @@ p.has-drop-cap:not(:focus)::first-letter {
 	font-size: 124px;
 }
 
-/* Images */
+/* Image */
 
-.wp-block-cover,
-.wp-block-cover.alignleft,
-.wp-block-cover.alignright,
-.wp-block-cover.aligncenter {
-	display: flex;
-}
-
-/* Full Width */
-figure.alignfull,
-.wp-block-cover.alignfull,
-.wp-block-gallery.alignfull,
-.wp-block-embed.is-type-video.alignfull {
-	width: 100vw;
-	max-width: 100vw;
-	margin-left: 0;
-	margin-right: 0;
-	position: relative;
-	left: 50%;
-	transform: translateX( -50% );
-}
-
-.wp-block-embed.is-type-video.alignfull iframe {
-	width: 100% !important;
-	height: 100% !important;
-}
-
-.rtl figure.alignfull,
-.rtl .wp-block-cover.alignfull,
-.rtl .wp-block-gallery.alignfull,
-.rtl .wp-block-embed.is-type-video.alignfull {
-	left: auto;
-	right: 50%;
-	transform: translateX(50%);
-}
-
-/* Wide Width */
-
-@media (min-width: 1024px) {
-	figure.alignwide,
-	.wp-block-cover.alignwide,
-	.wp-block-gallery.alignwide,
-	.wp-block-embed.is-type-video.alignwide {
-		width: 120%;
-		max-width: 120%;
-		margin-left: -10%;
-		margin-right: -10%;
-		position: relative;
-	}
-
-	.wp-block-embed.is-type-video.alignwide iframe {
-		width: 100% !important;
-		height: 100% !important;
-	}
+.wp-block-image.alignwide {
+	max-width: 1000%;
 }
 
 /* Gallery */
 
 .wp-block-gallery {
 	margin-bottom: 1.5em;
-	margin-left: auto;
 }
 
-.rtl .wp-block-gallery:not(.alignfull):not(.alignwide) {
-	margin-right: auto;
+.wp-block-gallery:not(.alignwide):not(.alignfull) {
+	margin-left: 0;
+	margin-right: 0;
 }
 
 .wp-block-gallery img.size-big,
@@ -114,11 +125,6 @@ figure.alignfull,
 	margin-bottom: 1.5em;
 }
 
-.wp-block-quote,
-.wp-block-quote.is-large p,
-.wp-block-quote.is-style-large p {
-}
-
 .wp-block-quote.alignleft {
 	margin-right: 1.5em;
 }
@@ -127,25 +133,11 @@ figure.alignfull,
 	margin-left: 1.5em;
 }
 
-.rtl .wp-block-quote:not(.is-large):not(.is-style-large).alignleft,
-.rtl .wp-block-quote:not(.is-large):not(.is-style-large).alignright {
-}
-
-.wp-block-quote cite {
-}
-
-.wp-block-quote cite:before {
-}
-
 .wp-block-quote.is-large cite,
 .wp-block-quote.is-large footer,
 .wp-block-quote.is-style-large cite,
 .wp-block-quote.is-style-large footer {
 	font-size: 80%;
-}
-
-.wp-block-quote.is-large,
-.wp-block-quote.is-style-large {
 }
 
 .wp-block-quote.is-large,
@@ -166,9 +158,22 @@ figure.alignfull,
 
 /* Audio */
 
+.wp-block-audio {
+	margin-bottom: 1.5em;
+}
+
 .wp-block-audio audio {
 	display: block;
 	width: 100%;
+}
+
+/* Cover */
+
+.wp-block-cover,
+.wp-block-cover.alignleft,
+.wp-block-cover.alignright,
+.wp-block-cover.aligncenter {
+	display: flex;
 }
 
 /* File */
@@ -229,25 +234,22 @@ figure.alignfull,
 /* Code */
 
 .wp-block-code {
+	background: #eee;
 	font-family: 'Courier 10 Pitch', Courier, monospace;
 	font-size: 15px;
 	line-height: 1.6;
-
-	overflow: auto;
-
 	max-width: 100%;
 	margin-bottom: 1.6em;
+	overflow: auto;
 	padding: 1.6em;
-
-	background: #eee;
 }
 
 /* Pullquote */
 
 .wp-block-pullquote {
+	border: 0;
 	margin: 0;
 	padding: 0;
-	border: 0;
 }
 
 .wp-block-pullquote blockquote {
@@ -278,35 +280,20 @@ figure.alignfull,
 	padding-right: 1.5em;
 }
 
-.rtl .wp-block-pullquote {
-}
-
 .wp-block-pullquote p {
 	margin: 0;
 }
 
 /* Table */
 
-.wp-block-table,
-.wp-block-table th,
-.wp-block-table td {
+@media (min-width: 964px) {
+	.wp-block-table.alignwide {
+		width: 924px;
+	}
 }
 
-.wp-block-table {
-}
-
-.wp-block-table th,
-.wp-block-table td {
-}
-
-.wp-block-table th {
-}
-
-.wp-block-table td {
-}
-
-.rtl .wp-block-table th,
-.rtl .wp-block-table td {
+.wp-block-table.alignfull {
+	width: 96vw;
 }
 
 /*--------------------------------------------------------------
@@ -329,11 +316,6 @@ figure.alignfull,
 	border: 2px solid currentColor;
 	box-shadow: none;
 	text-shadow: none;
-}
-
-.wp-block-button .wp-block-button__link:active,
-.wp-block-button .wp-block-button__link:hover,
-.wp-block-button .wp-block-button__link:focus {
 }
 
 .wp-block-button__link:not(.has-background) {
@@ -377,10 +359,18 @@ hr.wp-block-separator {
 	max-width: 100%;
 }
 
-.wp-block-separator.is-style-wide {
-	max-width: 120%;
-	margin-left: -10%;
-	margin-right: -10%;
+.wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
+	max-width: 100px;
+}
+
+/* Media & Text */
+
+.wp-block-media-text {
+	margin-bottom: 1.5em;
+}
+
+.wp-block-media-text *:last-child {
+	margin-bottom: 0;
 }
 
 /*--------------------------------------------------------------
